fix(checkout-sdk): spacings of nupay content

--- a/packages/checkout/core/src/components/malga-payments-nupay/malga-payments-nupay.scss
+++ b/packages/checkout/core/src/components/malga-payments-nupay/malga-payments-nupay.scss
@@ -1,4 +1,4 @@
 .malga-payments-nupay__container {
   display: block;
-  padding: 0 var(--malga-checkout-spacing-sm);
+  padding: 0 var(--malga-checkout-spacing-sm)  var(--malga-checkout-spacing-sm) var(--malga-checkout-spacing-sm);
 }
